# pytest-testrail-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  pytest.ini  testrail.yaml
.github/workflows/: publish.yml  run_pytest.yml
src/pytest_testrail_plugin/: conftest.py  fixture.py  plugin.py  testrail_client.py
tests/: test_plugin.py
